--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Estilo Global */
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -12,13 +13,19 @@ header {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: space-between; /* Ajuste para colocar o logo na lateral direita */
+}
+
+.logo {
+    margin-left: auto; /* Mover o logo para a direita */
+    display: flex;
+    align-items: center;
 }
 
 .logo img {
-    max-width: 150px;
-    margin-bottom: 10px;
+    width: 50px; /* Ajustar o tamanho do logo */
+    height: 50px;
+    border-radius: 50%; /* Tornar o logo redondo */
 }
 
 h1 {
