--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ section {
     margin: 0 auto;
 }
 
-#galeria {
+#gallery {
     text-align: center;
 }
 
@@ -170,7 +170,7 @@ footer {
         font-size: 16px;
     }
 
-    #galeria .feed .foto {
+    #gallery .feed .foto {
         width: calc(50% - 20px);
     }
 }
@@ -192,7 +192,7 @@ footer {
         font-size: 14px;
     }
 
-    #galeria .feed .foto {
+    #gallery .feed .foto {
         width: calc(100% - 20px);
     }
 
@@ -235,4 +235,16 @@ footer {
     font-size: 40px;
     font-weight: bold;
     cursor: pointer;
+}
+
+.swiper-slide {
+    width: calc(33.333% - 40px);
+    margin-bottom: 20px;
+}
+
+.swiper-slide video {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
